show all features

--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -15,10 +15,10 @@
         <input class="input1" type="text" [(ngModel)]="data_organization.name" />
 
         <!--Ẩn luồng xử lý-->
-        <!-- <div style="width: 120px; margin-left: 5px">
+        <div style="width: 120px; margin-left: 5px">
           {{'hide.processing.thread' | translate}}
         </div>
-        <input type ="checkbox" [(ngModel)]="data_organization.hideFlow"> -->
+        <input type ="checkbox" [(ngModel)]="data_organization.hideFlow">
       </div>
 
       <div class="contract__content--participants">
@@ -734,10 +734,10 @@
           }}" [(ngModel)]="item.name" [disabled]="item.type == 3" />
 
           <!--Ẩn luồng xử lý-->
-          <!-- <div style="width: 120px; margin-left: 5px">
+          <div style="width: 120px; margin-left: 5px">
             {{'hide.processing.thread' | translate}}
           </div>
-          <input type ="checkbox" [(ngModel)]="item.hideFlow"> -->
+          <input type ="checkbox" [(ngModel)]="item.hideFlow">
       </div>
 
       <div *ngIf="this.dataParnterOrganization().length >= 1" style="display: flex; justify-content: flex-end">
