Thêm tính năng upload file đính kèm vào hợp đồng đã hoàn thành

--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -113,6 +113,7 @@
                         <div class="div_icon" *ngIf="status == 'complete' && isQLHD_13">
                             <img src="../../assets/img/icon_share.svg" class="img_icon" ngbTooltip="{{'contract.share' | translate}}" (click)="shareContract(item.id);" />
                         </div>
+
                         <div class="div_icon" *ngIf="status == 'cancel'">
                             <!-- <img src="../../assets/img/view_reason_icon.svg" class="img_icon" ngbTooltip="{{'reasson.cancel.contract' | translate}}" (click)="ViewReasonCancel(item.id)" /> -->
                             <img src="../../assets/img/cancel_notes.svg" class="img_icon" ngbTooltip="{{ 'reasson.cancel.contract' | translate}}" (click)="ViewReasonCancel(item.id)" />
@@ -405,6 +406,9 @@
                         </div>
                         <div class="div_icon" *ngIf="status == 'complete' && isQLHD_13 && this.isOrg == 'off'">
                             <img src="../../assets/img/icon_share.svg" class="img_icon" ngbTooltip="{{'contract.share' | translate}}" (click)="shareContract(item.id);" />
+                        </div>
+                        <div class="div_icon" *ngIf="status == 'complete'">
+                            <img src="../../assets/img/upload_file.svg" class="img_icon" ngbTooltip="{{'Upload' | translate}}" (click)="uploadAttachFiles(item.id);" />
                         </div>
                         <!-- <div class="div_icon" *ngIf="status == 'complete' && this.isOrg == 'off'">
                             <img src="../../../assets/img/contract-liquidation.svg" class="img_icon" ngbTooltip="{{'contract.liquidation' | translate}}" (click)="addContractLiquidationNew(item.id);" />
