--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -408,7 +408,7 @@
                             <img src="../../assets/img/icon_share.svg" class="img_icon" ngbTooltip="{{'contract.share' | translate}}" (click)="shareContract(item.id);" />
                         </div>
                         <div class="div_icon" *ngIf="status == 'complete'">
-                            <img src="../../assets/img/upload_file.svg" class="img_icon" ngbTooltip="{{'Upload' | translate}}" (click)="uploadAttachFiles(item.id);" />
+                            <img src="../../assets/img/upload_file.svg" class="img_icon" ngbTooltip="{{'Upload' | translate}}" (click)="uploadAttachFiles(item);" />
                         </div>
                         <!-- <div class="div_icon" *ngIf="status == 'complete' && this.isOrg == 'off'">
                             <img src="../../../assets/img/contract-liquidation.svg" class="img_icon" ngbTooltip="{{'contract.liquidation' | translate}}" (click)="addContractLiquidationNew(item.id);" />
