Fix style ảnh preview trc khi ký otp

--- a/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
@@ -16,7 +16,7 @@
   </div>
 
   <div *ngIf="sign.valueSign" (click)="doSign()">
-    <img [src]="sign.valueSign" alt="mobifone.contract" [width]="sign.width ? sign.width : '100px'" [height]="sign.height ? sign.height : '54px'">
+    <img [src]="sign.valueSign" alt="mobifone.contract" style="width: auto" [width]="sign.width ? sign.width : '100px'" [height]="sign.height ? sign.height : '54px'">
   </div>
 </div>
 
