--- a/src/app/main/report/report-status-send-sms-email/report-status-send-sms-email.component.html
+++ b/src/app/main/report/report-status-send-sms-email/report-status-send-sms-email.component.html
@@ -23,44 +23,17 @@
       </div>
     </div>
 
-    <!--Trạng thái HĐ-->
-    <div class="col-md-2">
-      <div>{{'report.status.contract' | translate}}</div>
-      <div class="input-line">
-        <p-dropdown [(ngModel)]="contractStatus" panelStyleClass="font" appendTo="body" optionLabel="name"
-          optionValue="id" placeholder="{{'all' | translate}}" [showClear]="true" [options]="optionsStatusContract"
-          [autoDisplayFirst]="false"></p-dropdown>
-      </div>
-    </div>
-
-    <!--Trạng thái xử lý -->
-    <div class="col-md-2">
-      <div>{{'report.processing.status.contract' | translate}}</div>
-      <div class="input-line">
-        <p-dropdown [(ngModel)]="contractStatus" panelStyleClass="font" appendTo="body" optionLabel="name"
-          optionValue="id" placeholder="{{'all' | translate}}" [showClear]="true" [options]="optionsStatusProcess"
-          [autoDisplayFirst]="false"></p-dropdown>
-      </div>
-    </div>
-
     <!--Thời gian gửi-->
     <div class="col-md-2">
-      <div>{{ 'time.send.date' | translate}} <span style="color: red"> *</span></div>
+      <div>{{ 'time.send.date' | translate}}
+        <!-- <span style="color: red"> *</span> -->
+      </div>
       <div class="input-line">
         <p-calendar selectionMode="range" [readonlyInput]="true" [(ngModel)]="date" [showIcon]="true"
           dateFormat="dd/mm/yy"></p-calendar>
       </div>
     </div>
 
-    <!--Trạng thái gửi SMS/EMAIL-->
-    <!-- <div class="col-md-2">
-      <div>{{'status.sms.email' | translate}}</div>
-      <div class="input-line">
-        <p-dropdown [(ngModel)]="contractStatus" panelStyleClass="font" appendTo="body" optionLabel="name"
-          optionValue="id" placeholder="{{'all' | translate}}" [showClear]="true" [options]="optionsStatus"
-          [autoDisplayFirst]="false"></p-dropdown>
-      </div>
-    </div> -->
 
     <!--Button-->
     <div class="col-md-4 btn_search">
@@ -69,9 +42,11 @@
     </div>
   </div>
 
+
   <!--Bảng dữ liệu-->
-  <div class="row" style="padding-top: 20px;">
-    <p-table #dt [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true">
+  <div class="row" style="padding-top: 30px;">
+    <p-table #dt [value]="list" [paginator]="true" [rows]="10" id="table" [autoLayout]="true"
+    [totalRecords]="this.totalRecords" [(first)]="this.first">
 
       <!--header-->
       <ng-template pTemplate="header">
@@ -85,33 +60,25 @@
 
       <ng-template pTemplate="body" let-list let-row="rowIndex">
         <tr>
-          <ng-container style="background-color: #EEF7FF;" *ngIf="row == 0">
-            <td style="font-style: normal;font-weight: 800;font-size: 13px;">{{this.orgName}}</td>
-            <td *ngFor="let i of Arr(cols.length - 1).fill(1)"></td>
-          </ng-container>
-
           <ng-container *ngIf="row > 0">
-            <td>{{list.name}}</td>
-            <td>{{list.contractNo}}</td>
-            <td>{{list.organization.name}}</td>
-            <td>{{list.typeName}}</td>
-            <td>{{list.participants[0].name}}</td>
-            <td>{{this.convertTime(list.contractExpireTime)}}</td>
+            <td>{{list}}</td> <!--mã hđ-->
+            <td>{{list}}</td>  <!--số hđ-->
+            <td>{{list}}</td> <!--Tên HĐ-->
+            <td>{{list}}</td> <!--SĐT-->
+            <td style="text-align: center; ">
+              <img ngbTooltip="{{'content' | translate}}" src="../../../assets/img/icon_file_sms.svg" width="20px" (click)="contentSMS(list.id)" style="cursor: pointer;"/>
+            </td>
+            <td>{{this.convertTime(list)}}</td> <!--Thời gian gửi-->
+            <td>{{list}}</td> <!--Trạng thái gửi-->
           </ng-container>
         </tr>
       </ng-template>
 
       <ng-template pTemplate="paginatorleft" let-state>
-        <span style="color: white !important;">{{'chart.number' | translate}}: {{state.first <= 0 && state.totalRecords
-            <=1? 0:state.first + 1}} - {{(state.first+state.rows)> state.totalRecords ? (state.totalRecords > 0 ?
-            state.totalRecords - 1 : 0) : state.first+state.rows - 1}} / {{state.totalRecords > 0 ? state.totalRecords -
-            1 : 0}}</span>
+        <span style="color: white !important;">{{'chart.number' | translate}}: {{state.totalRecords > 0 ? state.first+1 : state.first}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
       </ng-template>
       <ng-template pTemplate="paginatorright" let-state>
-        <span style="color: #0160AE !important;">{{'chart.number' | translate}}: {{state.first <= 0 &&
-            state.totalRecords <=1? 0:state.first + 1}} - {{(state.first+state.rows)> state.totalRecords
-            ?(state.totalRecords > 0 ? state.totalRecords - 1 : 0) : state.first+state.rows - 1}} / {{state.totalRecords
-            > 0 ? state.totalRecords - 1 : 0}}</span>
+        <span style="color: #0160AE !important;">{{'chart.number' | translate}}: {{state.totalRecords > 0 ? state.first+1 : state.first}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
       </ng-template>
     </p-table>
   </div>
