Fix lại style ô text, ô số, số HĐ

--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -101,7 +101,11 @@
              (click)="getSignSelect(d)"
              [ngClass]="changeColorDrag(null, d, true)"
              [ngStyle]="changePosition(d,null,null,'#EBF8FF')">
-          <app-image-sign-contract class="main-sign-box"  id="image-sign-contract" (contractNoValue)="contractNoValueChange($event)" [contractNoValue]="contractNoValue"
+          <app-image-sign-contract 
+            [ngClass]="(d.sign_unit == 'chu_ky_so' || d.sign_unit == 'chu_ky_anh') ? 'main-sign-box': ''"  
+            id="image-sign-contract" 
+            (contractNoValue)="contractNoValueChange($event)" 
+            [contractNoValue]="contractNoValue"
             [contractNoValueSign]="contractNoValueSign"
             (checkedChange)="switchesValueChange($event)" 
             *ngIf="![2,3].includes(recipient.status)" 
