--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
@@ -127,7 +127,10 @@
                         <!-- <img src="assets/img/clear.svg" alt=""> -->
                         <img src="assets/img/border-clear.svg" alt="">
                     </div>
-                    <app-sign-contract-template class="main-sign-box" [datas]="datas" [sign]="d"></app-sign-contract-template>
+                    <app-sign-contract-template 
+                    [ngClass]="(d.sign_unit == 'chu_ky_so' || d.sign_unit == 'chu_ky_anh') ? 'main-sign-box': ''"  
+                    [datas]="datas" 
+                    [sign]="d"></app-sign-contract-template>
                 </div>
             </div>
         </div>
