--- a/src/app/main/report/report-status-send-sms-email/content-sms/content-sms.component.html
+++ b/src/app/main/report/report-status-send-sms-email/content-sms/content-sms.component.html
@@ -1,22 +1,14 @@
 <div class="container-fluid">
   <div class="header">
-    <h3 class="label-header">{{this.datas.title | translate}}</h3>
+    <h3 style="text-align: center;" class="label-header">{{this.data.title | translate}}</h3>
   </div>
 
-  <form [formGroup]="addForm" class="content">
     <div class="row">
-        <div class="col-md-12">
-            <div>
-                <textarea formControlName="reason"></textarea>
-            </div>
-            <div *ngIf="submitted && f.reason.errors" class="invalid">
-                <div *ngIf="f.reason.errors.required">Lý do hủy không được để trống</div>
-            </div>
+        <div>
+            <textarea disabled="true" style="width: 100%;" [(ngModel)]="this.data.dataSendLog"></textarea>
         </div>
     </div>
-
-    <div class="row" style="justify-content: center;padding-top: 10px;">
+    <div style="text-align: center;" >
         <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.close' | translate}}</button>
     </div>
-</form>
 </div>
