[Fix - SmsReport] Ẩn placeholder search theo tên HĐ

--- a/src/app/main/report/report-status-send-sms-email/report-status-send-sms-email.component.html
+++ b/src/app/main/report/report-status-send-sms-email/report-status-send-sms-email.component.html
@@ -19,7 +19,7 @@
     <div class="col-md-2">
       <div>{{'contract.information' | translate}}</div>
       <div class="input-line">
-        <input type="text" [(ngModel)]="contractInfo" class="input_text" placeholder="Mã HĐ, Số HĐ, Tên HĐ" />
+        <input type="text" [(ngModel)]="contractInfo" class="input_text" placeholder="Tìm kiếm theo Mã HĐ, Số HĐ" />
       </div>
     </div>
 
