[Fix - mSaleReport] Fix giao diện treeSelect tổ chức đồng bộ với style của page

--- a/src/app/main/report/report-status-send-sms-email/report-status-send-sms-email.component.scss
+++ b/src/app/main/report/report-status-send-sms-email/report-status-send-sms-email.component.scss
@@ -26,13 +26,15 @@
 .p-treeselect, .p-dropdown {
     border: 1px solid #106DB6;
     border-radius: 5px;
-    height: 33px;
+    // height: 33px;
     width: 100%;
     outline: 0;
     color: black !important;
+    align-items: center;
+    height: 33px;
 }
 .p-treeselect-label, .p-dropdown-label {
-    padding: 5px 5px 5px 15px;
+    // padding: 5px 5px 5px 15px;
 }
 }
 
