Bat buoc chon loai HD khi tao mau HD & tao HD

--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -61,11 +61,18 @@
     <!--Loại hợp đồng-->
     <div class="col-md-5">
       <div class="form-group">
-        <div class="label_item">{{'contract.type' | translate}}</div>
+        <div class="label_item">{{'contract.type' | translate}}
+          <span class="require_star">*</span>
+        </div>
         <div>
           <p-dropdown (onChange)="changeTypeContract()" panelStyleClass="font" [options]="typeList" [(ngModel)]="type_id" optionLabel="name"
             optionValue="id" placeholder="{{'choose.contract.type' | translate}}" [filter]="true" filterBy="name" [showClear]="true">
           </p-dropdown>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="invalid" *ngIf="errorContractType != ''">
+          {{errorContractType | translate}}
         </div>
       </div>
     </div>
