--- a/src/app/main/contract-template/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract-template/shared/model/infor-contract/infor-contract.component.html
@@ -53,7 +53,9 @@
     <div class="col-md-2"></div>
     <div class="col-md-5">
       <div class="form-group">
-        <div class="label_item">{{'contract.type' | translate}}</div>
+        <div class="label_item">{{'contract.type' | translate}}
+          <span class="require_star">*</span>
+        </div>
         <div>
           <p-dropdown
             panelStyleClass="font"
@@ -66,6 +68,11 @@
             filterBy="name"
             [showClear]="true"
             ></p-dropdown>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="invalid" *ngIf="errorContractType != ''">
+          {{errorContractType | translate}}
         </div>
       </div>
     </div>
