--- a/src/app/main/contract-folder/add-folder/add-folder.component.html
+++ b/src/app/main/contract-folder/add-folder/add-folder.component.html
@@ -5,6 +5,9 @@
   <div class="folder-name">
     <div class="label-input">{{'folder.name' | translate}}&nbsp;<span style="color: red; padding: 0">*</span></div>
     <div class="input-data-name" [ngStyle]="getStyleDetail()"><input type="text border" [readonly]="this.action == 'openDetail'" [ngStyle]="getStyleDetail()" [(ngModel)]="this.name"></div>
+    <div style="color: red" *ngIf="!this.valid() && this.isSubmit">
+        abc
+    </div>
   </div>
   <div class="folder-name">
     <div class="label-input-description">{{'folder.description' | translate}}&nbsp;</div>
