--- a/src/app/main/contract-type/add-contract-type/add-contract-type.component.html
+++ b/src/app/main/contract-type/add-contract-type/add-contract-type.component.html
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <div class="row" style="padding-top: 20px;">
+        <div *ngIf="site == 'NB'" class="row" style="padding-top: 20px;">
           <div class="col-md-12">
               <div class="label text-color">{{'group.type.contract' | translate}} <span class="required-title">*</span></div>
                 <p-dropdown
@@ -57,7 +57,6 @@
                   optionValue="id"
                   [showClear]="true"
                   [options]="optionsGroupContract"
-                  [(ngModel)]="optionsGroupContractValue"
                   formControlName="group_contract">
                 </p-dropdown>
 
@@ -68,7 +67,7 @@
           </div>
         </div>
 
-        <div class="row" style="justify-content: center;padding-top: 70px;">
+        <div class="row" style="justify-content: center;padding-top: 50px;">
             <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
             <button class="save-button">{{'btn.save' | translate}}</button>
         </div>
