--- a/src/app/main/report/report-contract-number-eContract-mSale/report-contract-number-eContract-mSale.component.html
+++ b/src/app/main/report/report-contract-number-eContract-mSale/report-contract-number-eContract-mSale.component.html
@@ -26,7 +26,7 @@
 
     <!--Loại hợp đồng-->
     <div class="col-md-3">
-        <div>{{'contract.type' | translate}}</div>
+        <div>{{'contract.group' | translate}}</div>
         <div class="input-line">
           <!-- <p-dropdown #typeContract optionValue="id" [(ngModel)]="type_id" placeholder="{{'all' | translate}}" [showClear]="true" [filter]="true" filterBy="name" [options]="typeList" optionLabel="name" >
         </p-dropdown> -->
@@ -52,7 +52,7 @@
 
   <!--Bảng dữ liệu-->
   <div class="row" style="padding-top: 20px;">
-    <p-table #dt [value]="list" [paginator]="true" [rows]="10" id="table" [autoLayout]="true"
+    <p-table #dt [value]="list" [paginator]="true" [rows]="4" id="table" [autoLayout]="true"
     [totalRecords]="this.totalRecords" [(first)]="this.first"
     >
 
@@ -67,24 +67,32 @@
         </ng-template>
 
         <ng-template pTemplate="body" let-list let-row="rowIndex">
-            <tr>
-                <ng-container style="background-color: #EEF7FF;" *ngIf="row == 0">
-                    <td style="font-style: normal;font-weight: 800;font-size: 13px;">{{this.orgName}}</td>
-                    <td *ngFor="let i of Arr(cols.length - 1).fill(1)"></td>
-                </ng-container>
-
-                <ng-container *ngIf="row > 0">
-                    <td>{{list.typename}}</td>
-                    <td>{{ list.na ? 'N/A' : list.quantity }}</td>
-                </ng-container>
+            <tr style="background-color: #EEF7FF;">
+              <td style="font-style: normal;font-weight: 800;font-size: 13px;">{{list.orgName}}</td>
+              <td></td>
             </tr>
+
+            <tr *ngFor="let data of list.data">
+              <td>{{data.name}}</td>
+              <td>{{data.quantity}}</td>
+            </tr>
+            
         </ng-template>
 
-        <ng-template pTemplate="paginatorleft" let-state>
+        <!-- <ng-template pTemplate="paginatorleft" let-state>
           <span style="color: white !important;">{{'chart.number' | translate}}: {{state.totalRecords > 0 ? state.first+1 : state.first}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
         </ng-template>
         <ng-template pTemplate="paginatorright" let-state>
           <span style="color: #0160AE !important;">{{'chart.number' | translate}}: {{state.totalRecords > 0 ? state.first+1 : state.first}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
+        </ng-template> -->
+
+        <!-- new version pagination -->
+        
+        <ng-template pTemplate="paginatorleft" let-state>
+          <span style="color: white !important;">{{'chart.number' | translate}}: {{(state.totalRecords <= 0 || state.fisrt <= 0) ? 0 : state.first+1}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
+        </ng-template>
+        <ng-template pTemplate="paginatorright" let-state>
+            <span style="color: #0160AE !important;">{{'chart.number' | translate}}: {{(state.totalRecords <= 0 || state.fisrt <= 0) ? 0 : state.first+1}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
         </ng-template>
     </p-table>
   </div>
